# taipei-restaurant-review-analysis

./: README.md  pyproject.toml  service.yaml
config/: settings.py
data/raw/: Beitou.json  Daan.json  Datong.json  Nangang.json  Neihu.json  Shilin.json  Shonshan.json  Wanhua.json  Wenshan.json  Xinyi.json  Zhongshan.json  Zhongzheng.json
data/reviews/: ChIJceaYPzmpQjQRlc1-wYpELkw_part1.csv
docker/: Dockerfile
etl/: PyMySQL.py
references/: texting.txt  uml_dbdiagram.txt  uml_dbdiagram02.txt
sql/: create-table.sql  dbdiagram.txt  truncte_table.sql
src/: main.py
src/crawler/: 0603test3.py  260604pw.py
src/etl/: insert_low_restaurant.py  insert_restaurant.py  insert_reviews_table.py  read-apify-insert.py  select_low_rating_restaurant.py  select_restaurant.py
test/: yvonne_pandas_practice.ipynb
