[project]
name = "taipei-restaurant-review-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.44.0",
    "sqlalchemy>=2.0.50",
]
